Fix section, add general section without spacing

--- a/css/style.css
+++ b/css/style.css
@@ -159,23 +159,30 @@ i{
     Main
 ------------*/
 
-.col-pic, .col-text{
+section{
+    padding: 50px 0px;
+    margin-bottom: 40px;
+}
+
+section:nth-child(2n){
+    background-color: #f6f6f6;
+}
+
+.col:first-child{
     float: left;
 }
 
-.col-pic{
-    width: 80%;
+.col:last-child{
+    float: right;
 }
 
-.col-text{
-    width: 20%;
-    text-align: left;
+.col{
+    width: 45%;
 }
-
-.col-text h1{
-    font-size:39px;
-    padding-top: 32px;
-    padding-bottom: 20px;
-}
+/* 
+.col > img{
+    width: 100%;
+    object-fit: contain;
+} */
 
 
